[package]
name = "praiya"
version = "0.1.0"
authors = ["Praiya contributors"]
edition = "2018"

[dependencies]
arrayvec = "0.5.1"
bytes = "0.5.4"
ct-logs = "0.7.0"
futures-core = "0.3.5"
futures-io = "0.3.5"
futures-util = "0.3.5"
http = "0.2.1"
hyper = "0.13.6"
hyper-rustls = "0.20.0"
log = "0.4.8"
pin-project = "0.4.20"
praiya-stubs = { version = "2.0.0", path = "codegen/target/generated-sources/" }
rustls = "0.17"
rustls-native-certs = "0.3.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.55"
serde_qs = "0.6.1"
thiserror = "1.0"
tokio = { version = "0.2.17", features = ["time", "fs"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
url = "2.1.1"
webpki-roots = "0.20.0"

[dev-dependencies]
slugify = "0.1.0"
env_logger = "0.7.1"
mockito = "0.26.0"
