[package]
name = "praiya"
description = "An async PagerDuty API client"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Praiya contributors"]
homepage = "https://github.com/fussybeaver/praiya"
repository = "https://github.com/fussybeaver/praiya"
documentation = "https://docs.rs/praiya"
readme = "README.md"
keywords = ["pagerduty"]
edition = "2021"

[workspace]
members = [
  "praiya-macro",
  "."
]

[dependencies]
arrayvec = "0.7"
bytes = "1.2"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.6", features = ["serde"] }
ct-logs = "0.9.0"
futures-core = "0.3.5"
futures-io = "0.3.5"
futures-util = "0.3.5"
http = "0.2.1"
hyper = "0.14"
hyper-rustls = "0.23"
log = "0.4.8"
paste = "1.0"
pin-project = "1.0"
praiya-macro = { version = "=0.1.0", path = "./praiya-macro" }
rustls = "0.20"
rustls-native-certs = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.10"
serde_urlencoded = { version = "0.7" }
thiserror = "1.0"
tokio = { version = "1", features = ["time", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.1", features = ["serde"] }
url = "2.1.1"
webpki-roots = "0.22"


[dev-dependencies]
slugify = "0.1.0"
env_logger = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
