[package]
description = "Proc macros for the Praiya API client"
license = "Apache-2.0"
name = "praiya-macro"
version = "0.1.0-rc1"
authors = ["Praiya contributors"]
homepage = "https://github.com/fussybeaver/praiya"
repository = "https://github.com/fussybeaver/praiya"
documentation = "https://docs.rs/praiya-macro"
keywords = ["pagerduty"]
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
